2005-04-03  Ryan Lortie  <desrt@desrt.ca>

	* libgnomevfs/Makefile.am: remove gnome-vfs-i18n.c

	* libgnomevfs/gnome-vfs-i18n.c: 'cvs delete' this file.  
	The function here (gnome_vfs_i18n_get_language_list) used an
	undocumented and soon to be removed call to bonobo.

	* libgnomevfs/gnome-vfs-mime-info.c: Convert this file to use
	g_get_language_names() instead of gnome_vfs_i18n_get_language_list.
	Fix locale prioritisation as per bug #169329.

	* libgnomevfs/gnome-vfs-application-registry.c: Same as above.

	* libgnomevfs/gnome-vfs-private-utils.h: Remove the prototype for
	gnome_vfs_i18n_get_language_list.

	* programs/.cvsignore: Add gnomevfs-mv.

2005-04-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomevfs/gnome-vfs-mime-info-cache.c:
	(gnome_vfs_mime_info_cache_dir_desktop_entry_is_valid):
	Merge patch that closes a few leaks from stable. Closes
	bug #172231.

2005-03-30  Steve Murphy  <murf@e-tools.com>

	* configure.in: Added "rw" to ALL_LINGUAS.

2005-03-21  Mikael Hallendal  <micke@imendio.com>

	* libgnomevfs/gnome-vfs-async-ops.c:
	* libgnomevfs/gnome-vfs-async-ops.h:
	- Deprecate the gnome_vfs_async_*_as_channel functions. One of them
	  aren't even implemented and the others doesn't behave as intended.
	  See bugs #157266, #157265, #157261, #138398 in GNOME Bugzilla. 
	- If they are needed they can be fixed and undeprecated in a future
	  version of GnomeVFS.

2005-03-20  Christian Kellner <gicmo@gnome.org>

	* configure.in: Add -Wno-pointer-sign if available. This will stop
	the gcc4 warnings about char * vs unsigned char * for now. It's not
	100% optimal but even the linux kernel uses it at the moment!
	* modules/http-proxy.c: Correct the logic to actually handle netmaks
	right!
	* modules/sftp-method.c: Initialize save_password. This is not really
	necessary here but it will keep gcc4 quiet.

2005-03-14  Kjartan Maraas  <kmaraas@gnome.org>

	* modules/http-neon-method.c: (http_get_file_info), (http_options),